fix(lineage): Gravitino 认证收窄为静态 token 单一 oauth 认证器,修复 OpenLineage 404
- GRAVITINO：gravitino.authenticators 从 oauth,basic 收窄为单一 oauth；删除
  serviceAdmins/extensionPackages/IdP 管理员密码相关字段与模板导出行，
  去掉 Spark 明文账密下发到所有节点的风险面
- SPARK3：catalog 联邦与 OpenLineage 血缘上报统一改用 spark.sql.gravitino.authType=token
  静态 JWT（复用同一枚 token），依赖 Gravitino fork 新增的 authType=token 分支
- 修复 spark.openlineage.transport.url 携带完整路径导致的固定 404：openlineage-spark
  的 HttpTransport 只要 transport.endpoint 为空就会用 setPath() 整体替换成硬编码默认
  路径 /api/v1/lineage，url 里的路径段会被直接丢弃；url 改回 base origin，新增
  transport.endpoint=/api/lineage
- Spark3DdlLoadTest 断言同步更新为 base origin + endpoint 分离
- 部署手册与交接文档同步记录沙箱端到端复验结果（catalog 联邦建表成功 + 30 条血缘事件
  全部送达 Gravitino，含列级血缘）